build_error.txt
    Checking zeroclaw v0.1.0 (E:\scripts-python\zeroclaw)
warning: unused import: `File`
 --> src\config\schema.rs:7:21
  |
7 | use std::fs::{self, File, OpenOptions};
  |                     ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PathBuf`
 --> src\resilience.rs:1:23
  |
1 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

error[E0061]: this function takes 2 arguments but 1 argument was supplied
    --> src\agent\loop_.rs:1204:25
     |
1204 |     let base_observer = observability::create_observer(&config.observability);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------------------- argument #2 of type `&std::path::Path` is missing
     |
note: function defined here
    --> src\observability\mod.rs:27:8
     |
  27 | pub fn create_observer(config: &ObservabilityConfig, workspace_dir: &Path) -> Box<dyn Observer> {
     |        ^^^^^^^^^^^^^^^                               --------------------
help: provide the argument
     |
1204 |     let base_observer = observability::create_observer(&config.observability, /* &std::path::Path */);
     |                                                                             ++++++++++++++++++++++++

For more information about this error, try `rustc --explain E0061`.
warning: `zeroclaw` (lib) generated 2 warnings
error: could not compile `zeroclaw` (lib) due to 1 previous error; 2 warnings emitted
